--- a/sass/adminscreen.scss
+++ b/sass/adminscreen.scss
@@ -54,3 +54,9 @@
 .no-close .ui-dialog-titlebar-close {
     display: none;
 }
+
+
+.add-entry-btn {
+    margin-top: 0.1em;
+    margin-right: 0.075em;
+}
